syntax = "proto3";

package vyletdatabase;
option go_package = "./;vyletdatabase";

import "buf/validate/validate.proto";

import "google/protobuf/timestamp.proto";

service ProfileService {
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);
  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse);
}

message GetProfileRequest {
  string did = 1 [
    (buf.validate.field).required = true
  ];
}

message GetProfileResponse {
  optional string error = 1;

  string did = 2 [
    (buf.validate.field).required = true
  ];
  optional string display_name = 3;
  optional string description = 4;
  optional string pronouns = 5;
  optional string avatar = 6;
  optional google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp indexed_at = 8;
}

message CreateProfileRequest {
  string did = 1 [
    (buf.validate.field).required = true
  ];
  optional string created_at = 2;
  optional string display_name = 3;
  optional string description = 4;
  optional string pronouns = 5;
  optional string avatar = 6;
}

message CreateProfileResponse {
  optional string error = 1;
}

message DeleteProfileRequest {
  string did = 1 [
    (buf.validate.field).required = true
  ];
}

message DeleteProfileResponse {
  optional string error = 1;
}
